# fighter-pulse

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: fighters_seed.json
db/migrations/: 0001_init.sql
eval/: evaluate.py  gold_set.csv
ingest/: config.py  cost_tracker.py  db.py  entities.py  models.py  run.py  seed_fighters.py
ingest/scoring/: base.py  classical.py  llm.py
ingest/sources/: base.py  rss.py
tests/: test_config.py  test_cost_tracker.py  test_entities.py
