[project]
name = "fighter-pulse"
version = "0.1.0"
description = "Batch pipeline: ingest MMA news, resolve fighter mentions, score sentiment per fighter."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "psycopg[binary]>=3.1",
    "vaderSentiment>=3.3.2",
    "rapidfuzz>=3.9",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingest"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
